further cleaning and begin analyzing by elle

--- a/Data_Cleaning_v02.ipynb
+++ b/Data_Cleaning_v02.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "4        Beaver         2185"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "4    2.0    1.0    0.0    0.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4    Bedford             4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "(67, 2)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "4    Bedford                       1.0                     1.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "4                                      0.722447  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 109,
    "metadata": {
     "scrolled": false
    },
@@ -605,7 +605,7 @@
        "      <th>Nov18</th>\n",
        "      <th>Dec18</th>\n",
        "      <th>Number Boxes</th>\n",
-       "      <th>2019 Population</th>\n",
+       "      <th>2019_Population</th>\n",
        "      <th>Any Drug Overdose Deaths</th>\n",
        "      <th>Opioid Overdose Deaths</th>\n",
        "      <th>Annual Any Overdose ED Rate by Visit</th>\n",
@@ -748,12 +748,12 @@
        "3     Armstrong        855.0    22.0    1.0    3.0    3.0    0.0    0.0   \n",
        "4        Beaver       2185.0   121.0   11.0   12.0    9.0   15.0   12.0   \n",
        "\n",
-       "   Jun18  Jul18  ...  Nov18  Dec18  Number Boxes  2019 Population   \\\n",
-       "0    NaN    NaN  ...    NaN    NaN           NaN               NaN   \n",
-       "1    3.0    3.0  ...    1.0    2.0          11.0           102,811   \n",
-       "2   58.0   95.0  ...   57.0  116.0          38.0         1,218,452   \n",
-       "3    2.0    1.0  ...    2.0    5.0           9.0            65,263   \n",
-       "4    9.0    7.0  ...    9.0   13.0          16.0           164,742   \n",
+       "   Jun18  Jul18  ...  Nov18  Dec18  Number Boxes  2019_Population  \\\n",
+       "0    NaN    NaN  ...    NaN    NaN           NaN              NaN   \n",
+       "1    3.0    3.0  ...    1.0    2.0          11.0          102,811   \n",
+       "2   58.0   95.0  ...   57.0  116.0          38.0        1,218,452   \n",
+       "3    2.0    1.0  ...    2.0    5.0           9.0           65,263   \n",
+       "4    9.0    7.0  ...    9.0   13.0          16.0          164,742   \n",
        "\n",
        "   Any Drug Overdose Deaths  Opioid Overdose Deaths  \\\n",
        "0                    4413.0                  3915.0   \n",
@@ -793,7 +793,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,15 +811,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['County', 'death_count', '2018', 'Jan18', 'Feb18', 'Mar18', 'Apr18',\n",
+      "       'May18', 'Jun18', 'Jul18', 'Aug18', 'Sep18', 'Oct18', 'Nov18', 'Dec18',\n",
+      "       'Number Boxes', '2019_Population', 'Any Drug Overdose Deaths',\n",
+      "       'Opioid Overdose Deaths', 'Annual Any Overdose ED Rate by Visit',\n",
+      "       'Annual Opioid Overdose ED Rate by Visit',\n",
+      "       'Annual Any Overdose ED Rate by Population',\n",
+      "       'Annual Opioid Overdose ED Rate by Population'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Index(['County', 'death_count', 'hotline call_2018', 'Jan18', 'Feb18', 'Mar18',\n",
+       "Index(['County', 'death_count', 'hotlinecall_2018', 'Jan18', 'Feb18', 'Mar18',\n",
        "       'Apr18', 'May18', 'Jun18', 'Jul18', 'Aug18', 'Sep18', 'Oct18', 'Nov18',\n",
-       "       'Dec18', 'Number Boxes', '2019 Population ', 'Any Drug Overdose Deaths',\n",
+       "       'Dec18', 'Number Boxes', '2019_Population', 'Any Drug Overdose Deaths',\n",
        "       'Opioid Overdose Deaths', 'Annual Any Overdose ED Rate by Visit',\n",
        "       'Annual Opioid Overdose ED Rate by Visit',\n",
        "       'Annual Any Overdose ED Rate by Population',\n",
@@ -827,16 +841,17 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "opioid_pa_df = opioid_pa_df.sort_values(by='County')\n",
-    "opioid_pa_df=opioid_pa_df.rename(columns={\"2018\":\"hotline call_2018\"})\n",
-    "opioid_pa_df.shape\n",
-    "opioid_pa_df.head()\n",
+    "print(opioid_pa_df.columns)\n",
+    "\n",
+    "\n",
+    "opioid_pa_df=opioid_pa_df.rename(columns={\"2018\":\"hotlinecall_2018\"})\n",
     "opioid_pa_df.columns"
    ]
   },
@@ -849,27 +864,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate death ratios, drop columns \n",
+    "# calculate death ratios, drop columns, reformatting\n",
     "\n",
     "opioid_pa_df2=opioid_pa_df.drop(['Jan18', 'Feb18', 'Mar18', 'Apr18','May18', 'Jun18', 'Jul18', 'Aug18', 'Sep18', 'Oct18', 'Nov18', 'Dec18'],axis=1)\n",
-    "opioid_pa_df2[\"any_od_death_over_all_deaths\"]=opioid_pa_df2[\"Any Drug Overdose Deaths\"]/opioid_pa_df2[\"death_count\"]\n",
-    "opioid_pa_df2[\"op_od_death_over_all_death\"]=opioid_pa_df2[\"Opioid Overdose Deaths\"]/opioid_pa_df2[\"death_count\"]\n",
-    "del opioid_pa_df2[\"death_count\"]\n",
+    "opioid_pa_df2[\"%_of_any_od_death_over_all_deaths\"]=(opioid_pa_df2[\"Any Drug Overdose Deaths\"]/opioid_pa_df2[\"death_count\"]*100).map(\"{:.2f}\".format)\n",
+    "opioid_pa_df2[\"%_of_op_od_death_over_all_deaths\"]=(opioid_pa_df2[\"Opioid Overdose Deaths\"]/opioid_pa_df2[\"death_count\"]*100).map(\"{:.2f}\".format)\n",
+    "opioid_pa_df2[\"Annual Any Overdose ED Rate by Visit\"] = opioid_pa_df2[\"Annual Any Overdose ED Rate by Visit\"].map(\"{:.2f}\".format)\n",
+    "opioid_pa_df2[\"Annual Opioid Overdose ED Rate by Visit\"] = opioid_pa_df2[\"Annual Opioid Overdose ED Rate by Visit\"].map(\"{:.2f}\".format)\n",
+    "opioid_pa_df2[\"Annual Any Overdose ED Rate by Population\"] = opioid_pa_df2[\"Annual Any Overdose ED Rate by Population\"].map(\"{:.2f}\".format)\n",
+    "opioid_pa_df2[\"Annual Opioid Overdose ED Rate by Population\"] = opioid_pa_df2[\"Annual Opioid Overdose ED Rate by Population\"].map(\"{:.2f}\".format)\n",
     "\n",
-    "opioid_pa_df2.head()\n",
-    "opioid_pa_df2.to_csv(\"clean data/final_clean_data_2018.csv\")\n",
+    "# change column order\n",
     "\n",
-    "# del opioid_pa_df2[\"Any Drug Overdose Deaths\"]\n",
-    "# del opioid_pa_df2[\"Opioid Overdose Deaths\"]\n",
-    "# opioid_pa_df2=opioid_pa_df2.rename(columns={\"2019 Population \":\"2019_population\"})\n",
-    "# opioid_pa_df2[\"death_over_population_any_od\"]=opioid_pa_df2[\"Any Drug Overdose Deaths\"]/opioid_pa_df2.iloc[:,4].astype(float)\n",
-    "# opioid_pa_df2[\"death_over_population_op_od\"]=opioid_pa_df2[\"Opioid Overdose Deaths\"]/opioid_pa_df2.iloc[:,4].astype(float)\n",
-    "# opioid_pa_df2.iloc[:,4]\n",
-    "# opioid_pa_df2.columns"
+    "opioid_pa_df2.columns\n",
+    "\n",
+    "col_new = ['County','2019_Population','death_count','Any Drug Overdose Deaths','Opioid Overdose Deaths',\\\n",
+    "           '%_of_any_od_death_over_all_deaths','%_of_op_od_death_over_all_deaths',\\\n",
+    "           'Annual Any Overdose ED Rate by Visit','Annual Opioid Overdose ED Rate by Visit',\\\n",
+    "           'Annual Any Overdose ED Rate by Population','Annual Opioid Overdose ED Rate by Population',\\\n",
+    "           'hotlinecall_2018', 'Number Boxes']\n",
+    "           \n",
+    "opioid_pa_df2=opioid_pa_df2[col_new]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>2019_Population</th>\n",
+       "      <th>death_count</th>\n",
+       "      <th>Any Drug Overdose Deaths</th>\n",
+       "      <th>Opioid Overdose Deaths</th>\n",
+       "      <th>%_of_any_od_death_over_all_deaths</th>\n",
+       "      <th>%_of_op_od_death_over_all_deaths</th>\n",
+       "      <th>Annual Any Overdose ED Rate by Visit</th>\n",
+       "      <th>Annual Opioid Overdose ED Rate by Visit</th>\n",
+       "      <th>Annual Any Overdose ED Rate by Population</th>\n",
+       "      <th>Annual Opioid Overdose ED Rate by Population</th>\n",
+       "      <th>hotlinecall_2018</th>\n",
+       "      <th>Number Boxes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adams</td>\n",
+       "      <td>102,811</td>\n",
+       "      <td>1055.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>1.52</td>\n",
+       "      <td>1.52</td>\n",
+       "      <td>63.24</td>\n",
+       "      <td>8.55</td>\n",
+       "      <td>6.47</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Allegheny</td>\n",
+       "      <td>1,218,452</td>\n",
+       "      <td>14051.0</td>\n",
+       "      <td>487.0</td>\n",
+       "      <td>411.0</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>73.27</td>\n",
+       "      <td>18.05</td>\n",
+       "      <td>8.25</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>1003.0</td>\n",
+       "      <td>38.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Armstrong</td>\n",
+       "      <td>65,263</td>\n",
+       "      <td>855.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>2.46</td>\n",
+       "      <td>33.59</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>7.39</td>\n",
+       "      <td>1.94</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Beaver</td>\n",
+       "      <td>164,742</td>\n",
+       "      <td>2185.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1.97</td>\n",
+       "      <td>1.83</td>\n",
+       "      <td>66.89</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>7.72</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Bedford</td>\n",
+       "      <td>48,176</td>\n",
+       "      <td>596.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>50.39</td>\n",
+       "      <td>7.60</td>\n",
+       "      <td>5.62</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      County 2019_Population  death_count  Any Drug Overdose Deaths  \\\n",
+       "1      Adams         102,811       1055.0                      16.0   \n",
+       "2  Allegheny       1,218,452      14051.0                     487.0   \n",
+       "3  Armstrong          65,263        855.0                      22.0   \n",
+       "4     Beaver         164,742       2185.0                      43.0   \n",
+       "5    Bedford          48,176        596.0                       1.0   \n",
+       "\n",
+       "   Opioid Overdose Deaths %_of_any_od_death_over_all_deaths  \\\n",
+       "1                    16.0                              1.52   \n",
+       "2                   411.0                              3.47   \n",
+       "3                    21.0                              2.57   \n",
+       "4                    40.0                              1.97   \n",
+       "5                     1.0                              0.17   \n",
+       "\n",
+       "  %_of_op_od_death_over_all_deaths Annual Any Overdose ED Rate by Visit  \\\n",
+       "1                             1.52                                63.24   \n",
+       "2                             2.93                                73.27   \n",
+       "3                             2.46                                33.59   \n",
+       "4                             1.83                                66.89   \n",
+       "5                             0.17                                50.39   \n",
+       "\n",
+       "  Annual Opioid Overdose ED Rate by Visit  \\\n",
+       "1                                    8.55   \n",
+       "2                                   18.05   \n",
+       "3                                    2.75   \n",
+       "4                                    2.02   \n",
+       "5                                    7.60   \n",
+       "\n",
+       "  Annual Any Overdose ED Rate by Population  \\\n",
+       "1                                      6.47   \n",
+       "2                                      8.25   \n",
+       "3                                      7.39   \n",
+       "4                                      7.72   \n",
+       "5                                      5.62   \n",
+       "\n",
+       "  Annual Opioid Overdose ED Rate by Population  hotlinecall_2018  Number Boxes  \n",
+       "1                                         1.00              27.0          11.0  \n",
+       "2                                         2.15            1003.0          38.0  \n",
+       "3                                         1.94              22.0           9.0  \n",
+       "4                                         0.66             121.0          16.0  \n",
+       "5                                         0.72              12.0           4.0  "
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "opioid_pa_df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opioid_pa_df2.to_csv(\"clean data/final_clean_data_2018.csv\",index=False)"
    ]
   },
   {
