Moved cleaning around and continued analysis based on Opioid Overdose Deaths

--- a/Analysis_v01.ipynb
+++ b/Analysis_v01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Adams</td>\n",
-       "      <td>102,811</td>\n",
+       "      <td>102811</td>\n",
        "      <td>1055.0</td>\n",
        "      <td>16.0</td>\n",
        "      <td>16.0</td>\n",
@@ -72,7 +72,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Allegheny</td>\n",
-       "      <td>1,218,452</td>\n",
+       "      <td>1218452</td>\n",
        "      <td>14051.0</td>\n",
        "      <td>487.0</td>\n",
        "      <td>411.0</td>\n",
@@ -88,7 +88,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Armstrong</td>\n",
-       "      <td>65,263</td>\n",
+       "      <td>65263</td>\n",
        "      <td>855.0</td>\n",
        "      <td>22.0</td>\n",
        "      <td>21.0</td>\n",
@@ -104,7 +104,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Beaver</td>\n",
-       "      <td>164,742</td>\n",
+       "      <td>164742</td>\n",
        "      <td>2185.0</td>\n",
        "      <td>43.0</td>\n",
        "      <td>40.0</td>\n",
@@ -120,7 +120,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Bedford</td>\n",
-       "      <td>48,176</td>\n",
+       "      <td>48176</td>\n",
        "      <td>596.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -138,12 +138,12 @@
        "</div>"
       ],
       "text/plain": [
-       "      County 2019_Population  death_count  Any Drug Overdose Deaths  \\\n",
-       "0      Adams         102,811       1055.0                      16.0   \n",
-       "1  Allegheny       1,218,452      14051.0                     487.0   \n",
-       "2  Armstrong          65,263        855.0                      22.0   \n",
-       "3     Beaver         164,742       2185.0                      43.0   \n",
-       "4    Bedford          48,176        596.0                       1.0   \n",
+       "      County  2019_Population  death_count  Any Drug Overdose Deaths  \\\n",
+       "0      Adams           102811       1055.0                      16.0   \n",
+       "1  Allegheny          1218452      14051.0                     487.0   \n",
+       "2  Armstrong            65263        855.0                      22.0   \n",
+       "3     Beaver           164742       2185.0                      43.0   \n",
+       "4    Bedford            48176        596.0                       1.0   \n",
        "\n",
        "   Opioid Overdose Deaths  %_of_any_od_death_over_all_deaths  \\\n",
        "0                    16.0                               1.52   \n",
@@ -188,210 +188,33 @@
        "4           4.0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"clean data/final_clean_data_2018.csv\")\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>County</th>\n",
-       "      <th>2019_Population</th>\n",
-       "      <th>death_count</th>\n",
-       "      <th>Any Drug Overdose Deaths</th>\n",
-       "      <th>Opioid Overdose Deaths</th>\n",
-       "      <th>%_of_any_od_death_over_all_deaths</th>\n",
-       "      <th>%_of_op_od_death_over_all_deaths</th>\n",
-       "      <th>Annual Any Overdose ED Rate by Visit</th>\n",
-       "      <th>Annual Opioid Overdose ED Rate by Visit</th>\n",
-       "      <th>Annual Any Overdose ED Rate by Population</th>\n",
-       "      <th>Annual Opioid Overdose ED Rate by Population</th>\n",
-       "      <th>hotlinecall_2018</th>\n",
-       "      <th>Number Boxes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Adams</td>\n",
-       "      <td>102,811</td>\n",
-       "      <td>1055.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1.52</td>\n",
-       "      <td>1.52</td>\n",
-       "      <td>63.24</td>\n",
-       "      <td>8.55</td>\n",
-       "      <td>6.47</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Allegheny</td>\n",
-       "      <td>1,218,452</td>\n",
-       "      <td>14051.0</td>\n",
-       "      <td>487.0</td>\n",
-       "      <td>411.0</td>\n",
-       "      <td>3.47</td>\n",
-       "      <td>2.93</td>\n",
-       "      <td>73.27</td>\n",
-       "      <td>18.05</td>\n",
-       "      <td>8.25</td>\n",
-       "      <td>2.15</td>\n",
-       "      <td>1003.0</td>\n",
-       "      <td>38.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Armstrong</td>\n",
-       "      <td>65,263</td>\n",
-       "      <td>855.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>2.57</td>\n",
-       "      <td>2.46</td>\n",
-       "      <td>33.59</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>7.39</td>\n",
-       "      <td>1.94</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Beaver</td>\n",
-       "      <td>164,742</td>\n",
-       "      <td>2185.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>1.97</td>\n",
-       "      <td>1.83</td>\n",
-       "      <td>66.89</td>\n",
-       "      <td>2.02</td>\n",
-       "      <td>7.72</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>121.0</td>\n",
-       "      <td>16.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bedford</td>\n",
-       "      <td>48,176</td>\n",
-       "      <td>596.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>50.39</td>\n",
-       "      <td>7.60</td>\n",
-       "      <td>5.62</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      County 2019_Population  death_count  Any Drug Overdose Deaths  \\\n",
-       "0      Adams         102,811       1055.0                      16.0   \n",
-       "1  Allegheny       1,218,452      14051.0                     487.0   \n",
-       "2  Armstrong          65,263        855.0                      22.0   \n",
-       "3     Beaver         164,742       2185.0                      43.0   \n",
-       "4    Bedford          48,176        596.0                       1.0   \n",
-       "\n",
-       "   Opioid Overdose Deaths  %_of_any_od_death_over_all_deaths  \\\n",
-       "0                    16.0                               1.52   \n",
-       "1                   411.0                               3.47   \n",
-       "2                    21.0                               2.57   \n",
-       "3                    40.0                               1.97   \n",
-       "4                     1.0                               0.17   \n",
-       "\n",
-       "   %_of_op_od_death_over_all_deaths  Annual Any Overdose ED Rate by Visit  \\\n",
-       "0                              1.52                                 63.24   \n",
-       "1                              2.93                                 73.27   \n",
-       "2                              2.46                                 33.59   \n",
-       "3                              1.83                                 66.89   \n",
-       "4                              0.17                                 50.39   \n",
-       "\n",
-       "   Annual Opioid Overdose ED Rate by Visit  \\\n",
-       "0                                     8.55   \n",
-       "1                                    18.05   \n",
-       "2                                     2.75   \n",
-       "3                                     2.02   \n",
-       "4                                     7.60   \n",
-       "\n",
-       "   Annual Any Overdose ED Rate by Population  \\\n",
-       "0                                       6.47   \n",
-       "1                                       8.25   \n",
-       "2                                       7.39   \n",
-       "3                                       7.72   \n",
-       "4                                       5.62   \n",
-       "\n",
-       "   Annual Opioid Overdose ED Rate by Population  hotlinecall_2018  \\\n",
-       "0                                          1.00              27.0   \n",
-       "1                                          2.15            1003.0   \n",
-       "2                                          1.94              22.0   \n",
-       "3                                          0.66             121.0   \n",
-       "4                                          0.72              12.0   \n",
-       "\n",
-       "   Number Boxes  \n",
-       "0          11.0  \n",
-       "1          38.0  \n",
-       "2           9.0  \n",
-       "3          16.0  \n",
-       "4           4.0  "
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# remove \"Pensylyania\" and \"Uknown\"\n",
-    "df2=df[df[\"County\"]!=\"Pennsylvania\"]\n",
-    "df2=df2[df2[\"County\"]!=\"Unknown\"]\n",
+    "df2 = pd.read_csv(\"clean data/final_clean_data_2018.csv\")\n",
     "df2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\megam\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -443,7 +266,7 @@
        "      <td>8.64</td>\n",
        "      <td>1.92</td>\n",
        "      <td>117.208955</td>\n",
-       "      <td>10.088235</td>\n",
+       "      <td>10.223881</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -469,10 +292,10 @@
        "50                                          1.92        117.208955   \n",
        "\n",
        "    Number Boxes  \n",
-       "50     10.088235  "
+       "50     10.223881  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +380,7 @@
        "      <td>3.3</td>\n",
        "      <td>78.0</td>\n",
        "      <td>117.2</td>\n",
-       "      <td>10.1</td>\n",
+       "      <td>10.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -567,10 +390,10 @@
        "     country  avg_death_ratio  avg_ed_visits  avg_hotline_calls  avg_box\n",
        "0     top_10              4.4           75.9              319.5     12.2\n",
        "1  bottom_10              0.1           32.5               10.0      3.7\n",
-       "2  state_avg              3.3           78.0              117.2     10.1"
+       "2  state_avg              3.3           78.0              117.2     10.2"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
