--- a/Data_Cleaning_v02.ipynb
+++ b/Data_Cleaning_v02.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "4        Beaver         2185"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "4    2.0    1.0    0.0    0.0  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4    Bedford             4"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "(67, 2)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "4    Bedford                       1.0                     1.0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "4                                      0.722447  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 105,
    "metadata": {
     "scrolled": false
    },
@@ -793,7 +793,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
        "5                                         0.72              12.0           4.0  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1076,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opioid_pa_df2.to_csv(\"clean data/final_clean_data_2018.csv\",index=False)"
+    "## Added Cleaning from Analysis_v01.ipynb\n",
+    "# remove \"Uknown\"\n",
+    "df=opioid_pa_df2[opioid_pa_df2[\"County\"]!=\"Unknown\"]\n",
+    "\n",
+    "# Additional column with typo to be removed\n",
+    "df=df[df[\"County\"]!='Lancaster   ']\n",
+    "\n",
+    "# Shape should now be 67, 13\n",
+    "\n",
+    "df['2019_Population'] = df['2019_Population'].str.replace(',', '')\n",
+    "\n",
+    "# Make every value into int, except for NaN values for Pennsylvania\n",
+    "\n",
+    "try:\n",
+    "    df['2019_Population'] = df['2019_Population'].astype(int)\n",
+    "    \n",
+    "except:\n",
+    "    ValueError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"Clean Data/final_clean_data_2018.csv\",index=False)"
    ]
   },
   {
@@ -1103,7 +1129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
